--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-tailwindcss",
+  "name": "components",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,11 +8,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@uppy/core": "^1.16.1",
+    "@uppy/dashboard": "^1.16.1",
+    "@uppy/react": "^1.11.3",
+    "@uppy/thumbnail-generator": "^1.7.6",
+    "@uppy/xhr-upload": "^1.7.0",
+    "autoprefixer": "^10.0.4",
+    "mongodb": "^3.6.4",
+    "multer": "^1.4.2",
     "next": "latest",
+    "nodemailer": "^6.4.18",
+    "postcss": "^8.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "autoprefixer": "^10.0.4",
-    "postcss": "^8.1.10",
-    "tailwindcss": "^2.0.2"
+    "react-slideshow-image": "^3.4.3",
+    "tailwindcss": "^2.0.2",
+    "uppy": "^1.25.2"
   }
 }
